Fix hero background issue overflow on mobile

--- a/_sass/_includes/_section__hero.scss
+++ b/_sass/_includes/_section__hero.scss
@@ -78,7 +78,7 @@
 	left: 50%;
 	transform: translateX(-60%);
 	z-index: -1;
-	max-width: 190%;
+	// max-width: 190%;
 
 	@include mq(tabletp) {
 		display: block;
